More work
git-svn-id: https://svn.apache.org/repos/asf/manifoldcf/branches/CONNECTORS-1639@1877283 13f79535-47bb-0310-9956-ffa450edef68